Create a entry in index page of new time line page

--- a/TimeTableWeb/Views/Home/Index.cshtml
+++ b/TimeTableWeb/Views/Home/Index.cshtml
@@ -17,6 +17,9 @@
             <li class="list-group-item">
                 @Html.ActionLink("Occupation List 3", "List3", "Occupation", new { area = "Occupation" }, new { })
             </li>
+            <li class="list-group-item">
+                @Html.ActionLink("Time Line 1", "Line1", "TimeLine", new { area = "TimeLine" }, new { })
+            </li>
         </ul>
     </div>
 </div>
