--- a/TimeTableWeb/Views/Home/Index.cshtml
+++ b/TimeTableWeb/Views/Home/Index.cshtml
@@ -18,6 +18,9 @@
                 @Html.ActionLink("Occupation List 3", "List3", "Occupation", new { area = "Occupation" }, new { })
             </li>
             <li class="list-group-item">
+                @Html.ActionLink("Occupation List 4", "List4", "Occupation", new { area = "Occupation" }, new { })
+            </li>
+            <li class="list-group-item">
                 @Html.ActionLink("Time Line 1", "Line1", "TimeLine", new { area = "TimeLine" }, new { })
             </li>
         </ul>
